chore: update deploy index for AnshMeshram

--- a/projects/cards/AnshMeshram/index.html
+++ b/projects/cards/AnshMeshram/index.html
@@ -1,9 +1,5 @@
-<!doctype html>
-<!--
-  Deploy-ready index for AnshMeshram component.
-  Place this file at the root of the AnshMeshram folder when deploying to Netlify
-  (Netlify requires an index.html at the root of the uploaded folder).
--->
+<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -17,7 +13,11 @@
     <div class="container">
       <main class="about-card" role="region" aria-labelledby="profile-name">
         <header class="card-header">
-          <img src="assets/images/anshMeshramGithub.jpg" alt="Ansh Meshram photo" class="avatar" />
+          <img
+            src="assets/images/anshMeshramGithub.jpg"
+            alt="Ansh Meshram photo"
+            class="avatar"
+          />
           <div class="info">
             <h1 id="profile-name">Ansh Meshram</h1>
             <p>Instrumentation Engineer · Web & AI Developer</p>
@@ -44,9 +44,24 @@
         </div>
 
         <nav class="links" aria-label="Social links">
-          <a href="https://github.com/anshmeshram" target="_blank" rel="noopener">GitHub</a>
-          <a href="https://leetcode.com/anshmeshram" target="_blank" rel="noopener">LeetCode</a>
-          <a href="https://linkedin.com/in/anshmeshram" target="_blank" rel="noopener">LinkedIn</a>
+          <a
+            href="https://github.com/anshmeshram"
+            target="_blank"
+            rel="noopener"
+            >GitHub</a
+          >
+          <a
+            href="https://leetcode.com/anshmeshram"
+            target="_blank"
+            rel="noopener"
+            >LeetCode</a
+          >
+          <a
+            href="https://linkedin.com/in/anshmeshram"
+            target="_blank"
+            rel="noopener"
+            >LinkedIn</a
+          >
         </nav>
       </main>
     </div>
